--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,4 +6,5 @@ jobs:
     steps:
       - checkout
       - run: |
-          echo "hello world"
+          git diff-tree --no-commit-id --name-only -r HEAD
+          git diff-tree --no-commit-id --name-only -r `echo ${CIRCLE_COMPARE_URL} | cut -d/ -f 7`
