--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,5 +6,6 @@ jobs:
     steps:
       - checkout
       - run: |
+          apt-get -y update && apt-get -y install git
           git diff-tree --no-commit-id --name-only -r HEAD
           git diff-tree --no-commit-id --name-only -r `echo ${CIRCLE_COMPARE_URL} | cut -d/ -f 7`
