--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,5 +6,5 @@ jobs:
     steps:
       - checkout
       - run: |
-          echo ${CIRCLE_COMPARE_URL} | cut -d/ -f 7
-          echo ${CIRCLE_COMPARE_URL}
+          echo $CIRCLE_COMPARE_URL | cut -d/ -f 7
+          echo $CIRCLE_COMPARE_URL
