--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,10 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-            - some-yaml-{{ checksum "some.yaml" }}
+            # If the exact one isn't found (by sha256 hash) the previous cache
+            # key is used. Note, this is filtered to just master below.
+            - some-yaml-v1-{{ checksum "some.yaml" }}
+            - some-yaml-v1
       - run: ./check.sh
       - save_cache:
           key: some-yaml-{{ checksum "some.yaml" }}
